# COMP579_Final_Project

./: .gitignore  .gitmodules  README.md  justfile  main.py  notes.txt  pyproject.toml  tester.py
.github/workflows/: ci.yaml
src/: modelsmodel.pt
src/models/: 2025-04-23-21-25-41_0.nn  2025-04-23-21-25-41_10.nn  2025-04-23-21-25-41_20.nn  2025-04-23-21-25-41_30.nn  2025-04-23-21-25-41_40.nn  2025-04-23-21-25-41_50.nn  2025-04-23-21-25-41_60.nn  2025-04-23-21-25-41_70.nn  2025-04-23-21-25-41_80.nn  2025-04-23-21-25-41_90.nn  2025-04-23-23-46-00_0.nn  2025-04-23-23-46-00_10.nn  2025-04-23-23-46-00_20.nn  2025-04-23-23-46-00_30.nn  2025-04-23-23-46-00_40.nn  2025-04-23-23-46-00_50.nn  2025-04-23-23-46-00_60.nn  2025-04-23-23-46-00_70.nn  2025-04-23-23-46-00_80.nn  2025-04-23-23-46-00_90.nn  2025-04-24-00-35-11_0.nn  2025-04-24-00-35-11_10.nn  2025-04-24-00-35-11_100.nn  2025-04-24-00-35-11_110.nn  2025-04-24-00-35-11_120.nn  2025-04-24-00-35-11_130.nn  2025-04-24-00-35-11_140.nn  2025-04-24-00-35-11_150.nn  2025-04-24-00-35-11_160.nn  2025-04-24-00-35-11_170.nn  2025-04-24-00-35-11_180.nn  2025-04-24-00-35-11_190.nn  2025-04-24-00-35-11_20.nn  2025-04-24-00-35-11_30.nn  2025-04-24-00-35-11_40.nn  2025-04-24-00-35-11_50.nn  2025-04-24-00-35-11_60.nn  2025-04-24-00-35-11_70.nn  2025-04-24-00-35-11_80.nn  2025-04-24-00-35-11_90.nn  (+45 more)
src/oterl/: 2025-04-24-16-47-33_100.nn  Notes.txt  __main__.py  config.yaml  config_DQN.yaml  config_RPPO.yaml  evaluation.py  models.py  plot.py  run.sh  test.py  tester.py
src/runs/: events.out.tfevents.1745246474.Alexs-Macbook-Pro.local.37972.0  events.out.tfevents.1745247988.Alexs-Macbook-Pro.local.52014.0  events.out.tfevents.1745248177.Alexs-Macbook-Pro.local.54801.0  events.out.tfevents.1745248226.Alexs-Macbook-Pro.local.55330.0  events.out.tfevents.1745248351.Alexs-Macbook-Pro.local.56585.0  events.out.tfevents.1745248402.Alexs-Macbook-Pro.local.56951.0  events.out.tfevents.1745248606.Alexs-Macbook-Pro.local.59169.0  events.out.tfevents.1745248684.Alexs-Macbook-Pro.local.59932.0  events.out.tfevents.1745249077.Alexs-Macbook-Pro.local.63783.0  events.out.tfevents.1745249232.Alexs-Macbook-Pro.local.65320.0  (+15 more)
(+321 files in other folders)
